:rocket: feat: adding update with docker template

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
-POSTGRES_PORT=5433
+# DATABASE CONFIG
+
+CONTAINER_NAME="container_name"
+DATABASE_USER="user"
+DATABASE_PASSWORD="password"
+DATABASE_DB="database"
+DATABASE_PORT=5433
