--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
-version: '3.5'
+version: '3.7'
+
 services:
   database:
-    container_name: postgres_db
-    image: postgres:15
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    build: .
+    image: postgres:latest
+    container_name: ${CONTAINER_NAME}
     ports:
-      - ${POSTGRES_PORT}:5432
+      - ${DATABASE_PORT}:5432
+    environment:
+      POSTGRES_DB: ${DATABASE_DB}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
